objects/Speaker__c.object
<CustomObject><fields>
        <fullName>Bio__c</fullName>
        <label>Bio</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Picture_Path__c</fullName>
        <label>Picture Path</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Picture__c</fullName>
        <formula>IMAGE(Picture_Path__c, '')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Speaker</label><nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Speaker Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Speakers</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>